--- a/package.json
+++ b/package.json
@@ -6,24 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sync": "npx tsx scripts/sync-to-firestore.ts"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
     "firebase": "^12.8.0",
-    "firebase-admin": "^13.6.0",
-    "next": "14.2.35",
+    "firebase-admin": "^12.7.0",
+    "firebase-tools": "^15.5.1",
+    "mermaid": "^10.9.5",
+    "next": "^16.1.6",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0",
+    "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.35",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
